--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <div class="head-box">iPhone X</div>
             <div class="sub-headline">Say Hello to the future</div>
         </div>
-        <div class="headline-img"><img src="./Apple.com IMG's/iPhoneX.jpg"</div>
+        <div class="headline-img"><img src="./Apple.com IMG's/iPhoneX.jpg"/> </div>
     </section>
 
     <section class="second-box">
@@ -43,8 +43,23 @@
             <div class="head-box2">iPhone 8</div>
             <div class="sub-headline2">A new generation of iPhone</div>
         </div>
-        <div class="headline-img2"><img src="./Apple.com IMG's/iPhone8.jpg"</div>
+
+        <div class="headline-img2"><img src="./Apple.com IMG's/iPhone8.jpg"/> </div>
     </section>
+
+    <section class = "promo-box">
+
+        <div class= "promo"> <img src="./Apple.com IMG's/homepod.jpg"/> </div>
+        <div class= "promo"> <img src="./Apple.com IMG's/watch3.jpg"/> </div>
+        <div class= "promo"> <img src="./Apple.com IMG's/iPadPro.jpg"/> </div>
+
+        <div class= "promo"></div>
+        <div class= "promo"></div>
+        <div class= "promo"></div> -->
+    
+
+    </section>
+
 
 
 
